--- a/source/scss/modules/_navigations.scss
+++ b/source/scss/modules/_navigations.scss
@@ -4,10 +4,6 @@
     @include list-unstyled();
   }
 
-  li {
-    position: relative;
-  }
-
   a {
     display: block;
   }
@@ -25,22 +21,58 @@
 
   }
 
-  &--dropdown {
+  &__dropdown {
+    position: relative;
 
-    li {
+    &:focus,
+    &:hover {
 
-      &:focus,
-      &:hover {
-
-        ul {
-          display: block;
-        }
-
+      > ul {
+        display: block;
       }
 
-      ul {
-        display: none;
-        position: absolute;
+    }
+
+    > ul {
+      display: none;
+      left: 0;
+      position: absolute;
+      top: 0;
+      white-space: nowrap;
+    }
+
+    &--bottom {
+
+      > ul {
+        bottom: auto;
+        top: 100%;
+      }
+
+    }
+
+    &--left {
+
+      > ul {
+        left: auto;
+        right: 100%;
+      }
+
+    }
+
+    &--right {
+
+      > ul {
+        left: 100%;
+        right: auto;
+      }
+
+    }
+
+    &--top {
+
+      > ul {
+        bottom: 100%;
+        top: auto;
       }
 
     }
