fix iframe embed

--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -813,7 +813,9 @@ add(a, b);</code></pre>
 
           <h3>iframe</h3>
 
-          <iframe src="ui.html"></iframe>
+          <div class="embed embed--16-9">
+            <iframe src="ui.html"></iframe>
+          </div>
 
         </section>
 
