add table source code

--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -286,20 +286,50 @@ add(a, b);</code></pre>
               </thead>
               <tfoot>
                 <tr>
-                  <th>Item 1</th>
-                  <th>Item 2</th>
-                  <th>Item 3</th>
+                  <td>Item 1</td>
+                  <td>Item 2</td>
+                  <td>Item 3</td>
                 </tr>
               </tfoot>
               <tbody>
                 <tr>
-                  <th>Item 1</th>
-                  <th>Item 2</th>
-                  <th>Item 3</th>
+                  <td>Item 1</td>
+                  <td>Item 2</td>
+                  <td>Item 3</td>
                 </tr>
               </tbody>
             </table>
           </div>
+
+        <pre><code>&lt;div class="table" itemscope itemtype="http://schema.org/Table"&gt;
+  &lt;table&gt;
+    &lt;caption&gt;…&lt;/caption&gt;
+
+    &lt;thead&gt;
+      &lt;tr&gt;
+        &lt;th&gt;…&lt;/th&gt;
+        &lt;th&gt;…&lt;/th&gt;
+      &lt;/tr&gt;
+    &lt;/thead&gt;
+
+    &lt;tfoot&gt;
+      &lt;tr&gt;
+        &lt;td&gt;…&lt;/td&gt;
+        &lt;td&gt;…&lt;/td&gt;
+      &lt;/tr&gt;
+    &lt;/tfoot&gt;
+
+    &lt;tbody&gt;
+
+      &lt;tr&gt;
+        &lt;td&gt;…&lt;/td&gt;
+        &lt;td&gt;…&lt;/td&gt;
+      &lt;/tr&gt;
+
+    &lt;/tbody&gt;
+
+  &lt;/table&gt;
+&lt;/div&gt;</code></pre>
 
         </section>
 
