--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -73,7 +73,7 @@ description: "Description goes here"
             <cite>Source</cite>
           </blockquote>
 
-          <q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q>
+          <p><q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q></p>
 
           <h3>Code</h3>
 
