--- a/source/css/style.css
+++ b/source/css/style.css
@@ -7,13 +7,13 @@
     box-sizing: border-box; }
 
 ::-moz-selection {
-  background: #303030;
-  color: #fafafa;
+  background: #111;
+  color: #fff;
   text-shadow: none; }
 
 ::selection {
-  background: #303030;
-  color: #fafafa;
+  background: #111;
+  color: #fff;
   text-shadow: none; }
 
 [hidden],
@@ -31,8 +31,8 @@ html {
   -webkit-text-size-adjust: 100%; }
 
 body {
-  background: #fafafa;
-  color: #303030;
+  background: #fff;
+  color: #111;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -288,7 +288,7 @@ code {
   font-size: .75em; }
 
 pre {
-  background-color: #fff;
+  background-color: #f5f5f5;
   display: block;
   margin: 0 0 1.5rem;
   overflow: auto;
@@ -727,7 +727,7 @@ th {
 
 .icon {
   display: inline-block;
-  fill: #303030;
+  fill: #111;
   height: 1em;
   vertical-align: middle;
   width: 1em; }
@@ -788,7 +788,7 @@ th {
   * {
     background: transparent;
     box-shadow: none;
-    color: #303030;
+    color: #111;
     text-shadow: none; }
 
   a,
@@ -812,13 +812,13 @@ th {
     page-break-inside: avoid; }
 
   blockquote {
-    border-left: 3px solid #303030; }
+    border-left: 3px solid #111; }
 
   thead {
     display: table-header-group; }
 
   select {
-    background: #fafafa; }
+    background: #fff; }
 
   .container {
     width: auto; }
