--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Fonts
 $root-font-size: 100%;
 
-$base-bgcolor: #fafafa;
-$base-color: #303030;
+$base-bgcolor: #fff;
+$base-color: #111;
 $base-font-family: Arial;
 $base-font-family-fallback: sans-serif;
 $base-font-size: 1rem;
