--- a/source/templates/partials/head.html
+++ b/source/templates/partials/head.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <!-- Search Engine -->
-
+  <meta content="/favicon-128x128.png" itemprop="image">
   <meta name="description" content="{{ description }}">
 
   <!-- Mobile & Windows 8 -->
