--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -48,7 +48,7 @@ description: "Description goes here"
 
           <h3>Address</h3>
 
-          <address itemtype="http://schema.org/PostalAddress" itemscope itemprop="address">
+          <address itemtype="http://schema.org/PostalAddress" itemscope>
             <p>
               <strong itemprop="name">Company Name</strong><br>
               <span itemprop="streetAddress">Address</span><br>
@@ -57,7 +57,7 @@ description: "Description goes here"
             </p>
           </address>
 
-          <pre><code>&lt;address itemtype="http://schema.org/PostalAddress" itemscope itemprop="address"&gt;
+          <pre><code>&lt;address itemtype="http://schema.org/PostalAddress" itemscope&gt;
   &lt;p&gt;
     &lt;strong itemprop="name"&gt;Company Name&lt;/strong&gt;&lt;br&gt;
     &lt;span itemprop="streetAddress"&gt;Address&lt;/span&gt;&lt;br&gt;
