add rel attribute to pagination

--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -958,11 +958,11 @@ add(a, b);</code></pre>
           <h3>Pagination</h3>
 
           <ul class="pagination">
-            <li class="pagination__previous"><a href="#">←</a></li>
+            <li class="pagination__previous"><a href="#" rel="prev">←</a></li>
             <li><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
-            <li class="pagination__next"><a href="#">→</a></li>
+            <li class="pagination__next"><a href="#" rel="next">→</a></li>
           </ul>
 
           <pre><code>&lt;ul class="pagination"&gt;
