add site schema tags

--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -1,4 +1,4 @@
-<header class="site__header" role="banner">
+<header class="site__header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
 
   <div class="grid__container">
 
