--- a/source/templates/partials/left.html
+++ b/source/templates/partials/left.html
@@ -1,4 +1,4 @@
-<aside class="site__aside site__aside--left" role="complementary">
+<aside class="site__aside site__aside--left" role="complementary" itemscope itemtype="http://schema.org/WPSideBar">
 
   LEFT
 
