--- a/source/templates/layouts/default.html
+++ b/source/templates/layouts/default.html
@@ -9,7 +9,7 @@
 
   <div class="site__container">
 
-    <main class="site__main" role="main">
+    <main class="site__main" role="main" itemscope itemprop="mainContentOfPage">
 
       {{> body}}
 
