--- a/source/templates/layouts/main-right.html
+++ b/source/templates/layouts/main-right.html
@@ -11,7 +11,7 @@
 
     <div class="grid__container">
 
-      <main class="site__main" role="main">
+      <main class="site__main" role="main" itemscope itemprop="mainContentOfPage">
 
         {{> body}}
 
