--- a/source/templates/partials/footer.html
+++ b/source/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="site__footer" role="contentinfo">
+<footer class="site__footer" role="contentinfo" itemscope itemtype="http://schema.org/WPFooter">
 
   <div class="grid__container">
 
