--- a/source/templates/partials/right.html
+++ b/source/templates/partials/right.html
@@ -1,4 +1,4 @@
-<aside class="site__aside site__aside--right" role="complementary">
+<aside class="site__aside site__aside--right" role="complementary" itemscope itemtype="http://schema.org/WPSideBar">
 
   RIGHT
 
