add blockquote source code

--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -73,6 +73,11 @@ description: "Description goes here"
             <cite>Source</cite>
           </blockquote>
 
+          <pre><code>&lt;blockquote&gt;
+  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.&lt;/p&gt;
+  &lt;cite&gt;Source&lt;/cite&gt;
+&lt;/blockquote&gt;</code></pre>
+
           <p><q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q></p>
 
           <h3>Code</h3>
