--- a/source/scss/modules/_media.scss
+++ b/source/scss/modules/_media.scss
@@ -11,7 +11,7 @@
     &--left,
     &--right {
 
-      @media (min-width: $media-tiny) {
+      @media (min-width: $media-sm) {
         max-width: 50%;
       }
 
