--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,14 +18,18 @@
 'modules/breadcrumb',
 'modules/buttons',
 'modules/code',
+'modules/comments',
 'modules/embed',
 'modules/forms',
 'modules/gallery',
+'modules/images',
 'modules/lists',
 'modules/media',
 'modules/navigations',
 'modules/pagination',
-'modules/tables';
+'modules/posts',
+'modules/tables',
+'modules/tags';
 
 // Layout
 
