--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -1142,6 +1142,211 @@ add(a, b);</code></pre>
 
         </section>
 
+        <section id="posts">
+
+          <h3>Posts</h3>
+
+          <ol class="posts">
+
+            <li class="post">
+
+              <article class="post media" itemscope itemtype="http://schema.org/Article">
+
+                <figure class="post__thumbnail media__obj--left">
+                  <a href="posts/post-title" itemprop="url">
+                    <picture>
+                      <img src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image">
+                    </picture>
+                  </a>
+                </figure>
+
+                <div class="media__body">
+
+                  <h2 class="post__title"><a href="posts/post-title" itemprop="url"><span itemprop="name">Post Title</span></a></h2>
+                  <div class="post__author"><a href="users/author" itemprop="url"><span itemprop="name">Post Author</span></a></div>
+                  <div class="post__date"><a href="posts?date=2000-01-01"><time itemprop="datePublished" content="2000-01-01T12:00:00-07:00">2000-01-01</a></div>
+
+                  <div class="post__body" itemprop="articleBody">
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam nisi eius magni distinctio eum! Consequatur id eveniet saepe quasi rem officiis culpa esse quaerat, sint amet ex magnam hic delectus!</p>
+                    <p><a href="posts/post-title" itemprop="url">Read full article</a></p>
+
+                  </div>
+
+                </div>
+
+              </article>
+
+            </li>
+
+            <li class="post">
+
+              <article class="post media" itemscope itemtype="http://schema.org/Article">
+
+                <figure class="post__thumbnail media__obj--left">
+                  <a href="posts/post-title" itemprop="url">
+                    <picture>
+                      <img src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image">
+                    </picture>
+                  </a>
+                </figure>
+
+                <div class="media__body">
+
+                  <h2 class="post__title"><a href="posts/post-title" itemprop="url"><span itemprop="name">Post Title</span></a></h2>
+                  <div class="post__author"><a href="users/author" itemprop="url"><span itemprop="name">Post Author</span></a></div>
+                  <div class="post__date"><a href="posts?date=2000-01-01"><time itemprop="datePublished" content="2000-01-01T12:00:00-07:00">2000-01-01</a></div>
+
+                  <div class="post__body" itemprop="articleBody">
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam nisi eius magni distinctio eum! Consequatur id eveniet saepe quasi rem officiis culpa esse quaerat, sint amet ex magnam hic delectus!</p>
+                    <p><a href="posts/post-title" itemprop="url">Read full article</a></p>
+
+                  </div>
+
+                </div>
+
+              </article>
+
+            </li>
+
+            <li class="post">
+
+              <article class="post media" itemscope itemtype="http://schema.org/Article">
+
+                <figure class="post__thumbnail media__obj--left">
+                  <a href="posts/post-title" itemprop="url">
+                    <picture>
+                      <img src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image">
+                    </picture>
+                  </a>
+                </figure>
+
+                <div class="media__body">
+
+                  <h2 class="post__title"><a href="posts/post-title" itemprop="url"><span itemprop="name">Post Title</span></a></h2>
+                  <div class="post__author"><a href="users/author" itemprop="url"><span itemprop="name">Post Author</span></a></div>
+                  <div class="post__date"><a href="posts?date=2000-01-01"><time itemprop="datePublished" content="2000-01-01T12:00:00-07:00">2000-01-01</a></div>
+
+                  <div class="post__body" itemprop="articleBody">
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam nisi eius magni distinctio eum! Consequatur id eveniet saepe quasi rem officiis culpa esse quaerat, sint amet ex magnam hic delectus!</p>
+                    <p><a href="posts/post-title" itemprop="url">Read full article</a></p>
+
+                  </div>
+
+                </div>
+
+              </article>
+
+            </li>
+
+          </ol>
+
+          <article class="post" itemscope itemtype="http://schema.org/Article">
+
+            <h1 class="post__title" itemprop="name">Post Title</h1>
+            <div class="post__author"><a href="users/author" itemprop="url"><span itemprop="name">Post Author</span></a></div>
+            <div class="post__date"><a href="posts?date=2000-01-01"><time itemprop="datePublished" content="2000-01-01T12:00:00-07:00">2000-01-01</a></div>
+
+            <div class="post__body" itemprop="articleBody">
+
+              <figure>
+                <picture>
+                  <img src="http://dummyimage.com/930x443/808080/fff.png" width="930" height="443" alt="">
+                </picture>
+              </figure>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae natus officiis, obcaecati deserunt excepturi, magnam non saepe nostrum nisi temporibus quos consequatur. Incidunt porro sequi saepe deleniti, amet blanditiis repellat eos ipsa voluptatibus. Quasi dolor iusto repellat natus ducimus fuga obcaecati expedita quia dolore laudantium error possimus, architecto nobis cum ut ratione eaque itaque tempora ea voluptas aliquid. Itaque impedit consectetur voluptatem quaerat neque dolores magnam sunt quisquam, consequuntur omnis maiores inventore porro voluptatum. Quam officiis blanditiis mollitia rem deleniti, iure, eaque quos neque ipsam nemo nulla vitae sequi, debitis doloremque facere. Vel velit rem quia suscipit libero voluptatibus molestiae, consequuntur iure consequatur tempore dolore eos hic maxime porro iusto inventore dignissimos sequi corporis. Illo sed minus incidunt molestiae assumenda.</p>
+
+            </div>
+
+            <ul class="tags" itemprop="keywords">
+              <li class="tag"><a href="tags/tag1" rel="tag">Tag 1</a></li>
+              <li class="tag"><a href="tags/tag2" rel="tag">Tag 2</a></li>
+              <li class="tag"><a href="tags/tag3" rel="tag">Tag 3</a></li>
+              <li class="tag"><a href="tags/tag4" rel="tag">Tag 4</a></li>
+              <li class="tag"><a href="tags/tag5" rel="tag">Tag 5</a></li>
+            </ul>
+
+            <ol class="comments">
+
+              <li class="comment media" itemscope itemtype="http://schema.org/Comment">
+
+                <div class="media__obj--left">
+                  <a href="users/author" itemprop="url">
+                    <img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="">
+                  </a>
+                </div>
+
+                <div class="media__body">
+
+                  <h3 class="comment__author"><a href="users/author" itemprop="url"><span itemprop="name">Comment Author</span></a></h3>
+                  <div class="comment__body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur neque itaque assumenda voluptate eveniet doloremque reiciendis maiores accusamus corporis accusantium modi, ad necessitatibus nulla sed dignissimos voluptatibus. Beatae, eius, repellendus?</p>
+                  </div>
+
+                </div>
+
+              </li>
+
+              <li class="comment media" itemscope itemtype="http://schema.org/Comment">
+
+                <div class="media__obj--left">
+                  <a href="users/author" itemprop="url">
+                    <img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="">
+                  </a>
+                </div>
+
+                <div class="media__body">
+
+                  <h3 class="comment__author"><a href="users/author" itemprop="url"><span itemprop="name">Comment Author</span></a></h3>
+                  <div class="comment__body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur neque itaque assumenda voluptate eveniet doloremque reiciendis maiores accusamus corporis accusantium modi, ad necessitatibus nulla sed dignissimos voluptatibus. Beatae, eius, repellendus?</p>
+                  </div>
+
+                </div>
+
+              </li>
+
+              <li class="comment media" itemscope itemtype="http://schema.org/Comment">
+
+                <div class="media__obj--left">
+                  <a href="users/author" itemprop="url">
+                    <img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="">
+                  </a>
+                </div>
+
+                <div class="media__body">
+
+                  <h3 class="comment__author"><a href="users/author" itemprop="url"><span itemprop="name">Comment Author</span></a></h3>
+                  <div class="comment__body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur neque itaque assumenda voluptate eveniet doloremque reiciendis maiores accusamus corporis accusantium modi, ad necessitatibus nulla sed dignissimos voluptatibus. Beatae, eius, repellendus?</p>
+                  </div>
+
+                </div>
+
+              </li>
+
+            </ol>
+
+            <form class="form" action="" method="post">
+
+              <div class="form__field">
+                <label for="">Comment</label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+              </div>
+
+              <div class="form__field">
+                <input type="submit" value="Post comment">
+              </div>
+
+            </form>
+
+          </article>
+
+        </section>
+
     </div>
 
     <div class="grid__col grid__col--3">
@@ -1160,6 +1365,7 @@ add(a, b);</code></pre>
           <li><a href="#forms">Forms</a></li>
           <li><a href="#navigations">Navigations</a></li>
           <li><a href="#grid">Grid</a></li>
+          <li><a href="#posts">Posts</a></li>
         </ul>
       </nav>
 
