--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -6,8 +6,8 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     box-sizing: border-box;
   }
 
@@ -106,11 +106,11 @@ blockquote {
 
   p {
 
-    &:before {
+    &::before {
       content: open-quote;
     }
 
-    &:after {
+    &::after {
       content: close-quote;
     }
 
