--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -3,7 +3,7 @@ title: "Website"
 description: "Description goes here"
 ---
 
-<div class="grid__container">
+<div class="grid">
 
   <div class="grid__row">
 
