--- a/source/templates/partials/footer.html
+++ b/source/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="site__footer" role="contentinfo" itemscope itemtype="http://schema.org/WPFooter">
 
-  <div class="grid__container">
+  <div class="grid">
 
     FOOTER
 
