--- a/source/templates/layouts/main-right.html
+++ b/source/templates/layouts/main-right.html
@@ -9,7 +9,7 @@
 
   <div class="site__container">
 
-    <div class="grid__container">
+    <div class="grid">
 
       <main class="site__main" role="main" itemscope itemprop="mainContentOfPage">
 
