--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site__header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
 
-  <div class="grid__container">
+  <div class="grid">
 
     <h1>{{ title }}</h1>
 
