--- a/source/scss/layout/_header.scss
+++ b/source/scss/layout/_header.scss
@@ -1,6 +1,10 @@
 $header-bgcolor: inherit;
 $header-color: inherit;
 
+header {
+  display: block;
+}
+
 .site__header {
   background: $header-bgcolor;
   color: $header-color;
