--- a/source/css/style.css
+++ b/source/css/style.css
@@ -16,10 +16,6 @@
   color: #fff;
   text-shadow: none; }
 
-[hidden],
-template {
-  display: none; }
-
 html {
   -webkit-font-font-smoothing: antialiased;
   font-size: 100%;
@@ -44,183 +40,30 @@ body {
   min-height: 100%;
   position: relative; }
 
-article,
-aside,
-details,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block; }
+.align {
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+  .align__item--top {
+    -webkit-align-self: flex-start;
+        -ms-flex-item-align: start;
+            align-self: flex-start; }
+  .align__item--bottom {
+    -webkit-align-self: flex-end;
+        -ms-flex-item-align: end;
+            align-self: flex-end; }
 
-canvas,
-progress {
+audio {
   display: inline-block;
   vertical-align: baseline; }
-
-a {
-  background: transparent;
-  border: 0;
-  color: #2e719e;
-  text-decoration: none;
-  transition: background-color .3s, color .3s; }
-  a:active {
-    color: #3a8dc6; }
-  a:focus, a:hover {
-    color: #235577; }
-  a:focus {
-    outline: none; }
-
-address,
-em {
-  font-style: italic; }
-
-b,
-strong {
-  font-weight: bold; }
-
-blockquote {
-  margin: 0 0 1.5rem;
-  quotes: '\201C' '\201D' '\2018' '\2019'; }
-  blockquote p::before {
-    content: open-quote; }
-  blockquote p::after {
-    content: close-quote; }
-
-button {
-  background: transparent;
-  border: 0;
-  color: inherit;
-  cursor: pointer;
-  font: inherit;
-  margin: 0;
-  overflow: visible;
-  padding: 0;
-  text-transform: none; }
-  button::-moz-focus-inner {
-    border: 0;
-    padding: 0; }
-
-canvas {
-  vertical-align: middle; }
-
-details {
-  margin: 0 0 1.5rem; }
-
-dialog {
-  border: 0;
-  display: none;
-  padding: 1rem; }
-  dialog::backdrop {
-    background: rgba(0, 0, 0, 0.5);
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 0; }
-  dialog[open] {
-    display: block; }
-
-figure,
-figcaption,
-header {
-  display: block;
-  margin: 0; }
-
-footer {
-  display: block;
-  margin: 0;
-  padding: 0; }
-
-h1, h2, h3, h4, h5, h6 {
-  color: inherit;
-  font-family: inherit, sans-serif;
-  font-weight: 700; }
-
-h1 {
-  font-size: 2rem;
-  line-height: 1.2;
-  margin: 0 0 .5rem; }
-
-h2 {
-  font-size: 1.5rem;
-  line-height: 1.2;
-  margin: 0 0 .5rem; }
-
-h3 {
-  font-size: 1.25rem;
-  line-height: 1.2;
-  margin: 0 0 .5rem; }
-
-h4 {
-  font-size: 1rem;
-  line-height: 1.2;
-  margin: 0 0 .5rem; }
-
-h5 {
-  font-size: 0.875rem;
-  line-height: 1.2;
-  margin: 0 0 .5rem; }
-
-h6 {
-  font-size: 0.75rem;
-  line-height: 1.2;
-  margin: 0 0 .5rem; }
-
-hr {
-  background-color: #bdbdbd;
-  border: 0;
-  box-sizing: content-box;
-  height: 1px;
-  margin: 0 0 1.5rem; }
-
-img {
-  height: auto;
-  max-width: 100%;
-  vertical-align: middle; }
-
-meter,
-progress {
-  width: 100%; }
-
-p {
-  margin: 0 0 1.5rem; }
-
-q {
-  quotes: '\201C' '\201D' '\2018' '\2019'; }
-
-small {
-  font-size: .75rem; }
-
-summary:focus {
-  outline: none; }
-
-sub,
-sup {
-  font-size: .75rem;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sup {
-  top: -.5rem; }
-
-sub {
-  bottom: -.25rem; }
-
-svg {
-  border: 0;
-  height: auto;
-  max-width: 100%;
-  width: 100%; }
-  svg:not(:root) {
-    overflow: hidden; }
+  audio:not([controls]) {
+    display: none; }
 
 .breadcrumb {
   list-style: none;
@@ -238,6 +81,20 @@ svg {
   .breadcrumb a {
     display: block;
     padding: .25rem .5rem; }
+
+button {
+  background: transparent;
+  border: 0;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  margin: 0;
+  overflow: visible;
+  padding: 0;
+  text-transform: none; }
+  button::-moz-focus-inner {
+    border: 0;
+    padding: 0; }
 
 .button {
   background: #95a5a6;
@@ -282,6 +139,10 @@ svg {
     .button--error:focus, .button--error:hover {
       background: #8f2f24; }
 
+canvas {
+  display: inline-block;
+  vertical-align: baseline; }
+
 code {
   font-family: "Courier New", monospace;
   font-size: .75em; }
@@ -299,17 +160,28 @@ pre {
   margin: 0;
   padding: 0; }
 
-audio,
-video {
-  display: inline-block;
-  vertical-align: baseline; }
+details {
+  display: block;
+  margin: 0 0 1.5rem; }
 
-audio:not([controls]) {
-  display: none; }
+summary {
+  display: block; }
+  summary:focus {
+    outline: none; }
 
-video {
-  height: auto;
-  max-width: 100%; }
+dialog {
+  border: 0;
+  display: none;
+  padding: 1rem; }
+  dialog::backdrop {
+    background: rgba(0, 0, 0, 0.5);
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0; }
+  dialog[open] {
+    display: block; }
 
 .embed {
   height: 0;
@@ -488,8 +360,131 @@ textarea {
         .gallery .images li {
           width: 33.33333%; } }
 
+.grid {
+  margin: 0 auto;
+  max-width: 78rem;
+  width: 90%; }
+  .grid::after {
+    clear: both;
+    content: '';
+    display: table; }
+  .grid__row {
+    margin: 0 -1%; }
+    .grid__row::after {
+      clear: both;
+      content: '';
+      display: table; }
+  .grid__col {
+    margin: 0 1%;
+    min-height: 1px; }
+    @media (min-width: 48em) {
+      .grid__col {
+        float: left; }
+        .grid__col--1 {
+          width: 6.33333%; }
+        .grid__col--2 {
+          width: 14.66667%; }
+        .grid__col--3 {
+          width: 23%; }
+        .grid__col--4 {
+          width: 31.33333%; }
+        .grid__col--5 {
+          width: 39.66667%; }
+        .grid__col--6 {
+          width: 48%; }
+        .grid__col--7 {
+          width: 56.33333%; }
+        .grid__col--8 {
+          width: 64.66667%; }
+        .grid__col--9 {
+          width: 73%; }
+        .grid__col--10 {
+          width: 81.33333%; }
+        .grid__col--11 {
+          width: 89.66667%; }
+        .grid__col--12 {
+          width: 98%; } }
+
+h1, h2, h3, h4, h5, h6 {
+  color: inherit;
+  font-family: inherit, sans-serif;
+  font-weight: 700; }
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+  margin: 0 0 .5rem; }
+
+h2 {
+  font-size: 1.5rem;
+  line-height: 1.2;
+  margin: 0 0 .5rem; }
+
+h3 {
+  font-size: 1.25rem;
+  line-height: 1.2;
+  margin: 0 0 .5rem; }
+
+h4 {
+  font-size: 1rem;
+  line-height: 1.2;
+  margin: 0 0 .5rem; }
+
+h5 {
+  font-size: 0.875rem;
+  line-height: 1.2;
+  margin: 0 0 .5rem; }
+
+h6 {
+  font-size: 0.75rem;
+  line-height: 1.2;
+  margin: 0 0 .5rem; }
+
+.icon {
+  display: inline-block;
+  fill: #111;
+  height: 1em;
+  vertical-align: middle;
+  width: 1em; }
+
+.icon--2x {
+  font-size: 2rem; }
+
+.icon--3x {
+  font-size: 3rem; }
+
+.icon--4x {
+  font-size: 4rem; }
+
+img,
+svg {
+  border: 0;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
 figure {
+  display: block;
   margin: 0 0 1.5rem; }
+
+figcaption {
+  display: block; }
+
+a {
+  background: transparent;
+  border: 0;
+  color: #2e719e;
+  text-decoration: none;
+  transition: background-color .3s, color .3s; }
+  a:active {
+    color: #3a8dc6; }
+  a:focus, a:hover {
+    color: #235577; }
+  a:focus {
+    outline: none; }
 
 dl,
 ol,
@@ -540,6 +535,9 @@ ul {
     -webkit-flex: 1;
         -ms-flex: 1;
             flex: 1; }
+
+nav {
+  display: block; }
 
 .navigation ul {
   list-style: none;
@@ -602,12 +600,41 @@ ul {
   .pagination__next {
     float: right; }
 
+article {
+  display: block; }
+
 .posts {
   list-style: none;
   margin: 0 0 1.5rem;
   padding: 0; }
 
 .post {
+  margin: 0 0 1.5rem; }
+
+meter {
+  width: 100%; }
+
+progress {
+  display: inline-block;
+  vertical-align: baseline;
+  width: 100%; }
+
+blockquote {
+  margin: 0 0 1.5rem;
+  quotes: '\201C' '\201D' '\2018' '\2019'; }
+  blockquote p::before {
+    content: open-quote; }
+  blockquote p::after {
+    content: close-quote; }
+
+q {
+  quotes: '\201C' '\201D' '\2018' '\2019'; }
+
+hr {
+  background-color: #bdbdbd;
+  border: 0;
+  box-sizing: content-box;
+  height: 1px;
   margin: 0 0 1.5rem; }
 
 table {
@@ -668,6 +695,68 @@ th {
     border: 1px solid #bdbdbd;
     padding: .25rem .5rem; }
 
+[hidden],
+template {
+  display: none; }
+
+address,
+em {
+  font-style: italic; }
+
+b,
+strong {
+  font-weight: bold; }
+
+p {
+  margin: 0 0 1.5rem; }
+
+small {
+  font-size: .75rem; }
+
+sub,
+sup {
+  font-size: .75rem;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -.5rem; }
+
+sub {
+  bottom: -.25rem; }
+
+.text--lower {
+  text-transform: lowercase; }
+.text--upper {
+  text-transform: uppercase; }
+.text--center {
+  text-align: center; }
+
+video {
+  display: inline-block;
+  height: auto;
+  max-width: 100%;
+  vertical-align: baseline; }
+
+.site__container {
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+
+footer {
+  display: block;
+  margin: 0;
+  padding: 0; }
+
+.site__footer {
+  background: inherit;
+  color: inherit;
+  padding: 2rem 0; }
+
+header {
+  display: block; }
+
 .site__header {
   background: inherit;
   color: inherit;
@@ -676,23 +765,22 @@ th {
 .site__logo img {
   margin: 0 auto; }
 
-.site__container {
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1; }
-
-.site__main {
-  padding: 3rem 0; }
-
 .site__aside--left {
   -webkit-order: -1;
       -ms-flex-order: -1;
           order: -1; }
 
-.site__footer {
-  background: inherit;
-  color: inherit;
-  padding: 2rem 0; }
+main {
+  display: block; }
+
+.site__main {
+  padding: 3rem 0; }
+
+section {
+  display: block; }
+
+aside {
+  display: block; }
 
 .animate {
   -webkit-animation-duration: 1s;
@@ -702,86 +790,6 @@ th {
   .animate--infinite {
     -webkit-animation-iteration-count: infinite;
             animation-iteration-count: infinite; }
-
-.grid {
-  margin: 0 auto;
-  max-width: 78rem;
-  width: 90%; }
-  .grid::after {
-    clear: both;
-    content: '';
-    display: table; }
-  .grid__row {
-    margin: 0 -1%; }
-    .grid__row::after {
-      clear: both;
-      content: '';
-      display: table; }
-  .grid__col {
-    margin: 0 1%;
-    min-height: 1px; }
-    @media (min-width: 48em) {
-      .grid__col {
-        float: left; }
-        .grid__col--1 {
-          width: 6.33333%; }
-        .grid__col--2 {
-          width: 14.66667%; }
-        .grid__col--3 {
-          width: 23%; }
-        .grid__col--4 {
-          width: 31.33333%; }
-        .grid__col--5 {
-          width: 39.66667%; }
-        .grid__col--6 {
-          width: 48%; }
-        .grid__col--7 {
-          width: 56.33333%; }
-        .grid__col--8 {
-          width: 64.66667%; }
-        .grid__col--9 {
-          width: 73%; }
-        .grid__col--10 {
-          width: 81.33333%; }
-        .grid__col--11 {
-          width: 89.66667%; }
-        .grid__col--12 {
-          width: 98%; } }
-
-.icon {
-  display: inline-block;
-  fill: #111;
-  height: 1em;
-  vertical-align: middle;
-  width: 1em; }
-
-.icon--2x {
-  font-size: 2rem; }
-
-.icon--3x {
-  font-size: 3rem; }
-
-.icon--4x {
-  font-size: 4rem; }
-
-.align {
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: row;
-      -ms-flex-direction: row;
-          flex-direction: row; }
-  .align__item--top {
-    -webkit-align-self: flex-start;
-        -ms-flex-item-align: start;
-            align-self: flex-start; }
-  .align__item--bottom {
-    -webkit-align-self: flex-end;
-        -ms-flex-item-align: end;
-            align-self: flex-end; }
 
 .center-block {
   display: block;
@@ -794,13 +802,6 @@ th {
   top: 0;
   -webkit-transform: translateZ(0);
           transform: translateZ(0); }
-
-.text--lower {
-  text-transform: lowercase; }
-.text--upper {
-  text-transform: uppercase; }
-.text--center {
-  text-align: center; }
 
 .invisible {
   left: -9999px;
